add my friend pic

--- a/friendprofile.html
+++ b/friendprofile.html
@@ -6,6 +6,7 @@
     <title>friend profile</title>
 </head>
 <body>
+    <img src="images/my-friend-image.jpg" alt="Friend's Picture">
     <a href="index.html">Back to Home</a>
 </body>
 </html>
