--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <li><a href="profile.html">My profile</a></li>
         <li><a href="camt.html">CAMT Information</a></li>
     </ul>
+    <img src="camt.png" alt="camt Picture">
+
 </body>
 </html>
