--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <ul>
         <li><a href="profile.html">My profile</a></li>
         <li><a href="camt.html">CAMT Information</a></li>
+        <li><a href="friendprofile.html">CAMT Information</a></li>
+
     </ul>
     <img src="camt.png" alt="camt Picture">
 
